feat: SSE 통합 및 Kafka 기반 이벤트 처리 확장
- SSE 메시지 모델 추가: `SseMessage` 클래스 도입 및 브로드캐스트/수신자 필터링 기능 구현
- WebSocket 및 SSE 채널 인증: `JwtAuthenticationChannelInterceptor` 도입
- Kafka 이벤트 리스너 구현: `SseRequiredTopicListener`에서 주요 이벤트 처리 및 SSE 전송
- Redis 캐싱 통합: `RedisConfig` 및 `RedisLockProvider` 추가
- 이벤트 기반 설계 확장: BinaryContent, Channel, User 관련 이벤트 처리 개선 및 SSE 연동
- 기본 RedisLockProvider로 분산 락 구현
- 불필요한 코드를 정리하고 이벤트 생성 및 처리 로직을 효율화