@@ -3,21 +3,24 @@ package com.sprint.mission.discodeit.event.listener;
 import com.sprint.mission.discodeit.dto.data.MessageDto;
 import com.sprint.mission.discodeit.event.message.MessageCreatedEvent;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
-import org.springframework.stereotype.Component;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.transaction.event.TransactionPhase;
 import org.springframework.transaction.event.TransactionalEventListener;
 
-@Component
+@Slf4j
 @RequiredArgsConstructor
+//@Component
 public class WebSocketRequiredEventListener {
 
   private final SimpMessagingTemplate messagingTemplate;
 
+  @Async("eventTaskExecutor")
   @TransactionalEventListener(phase = TransactionPhase.AFTER_COMMIT)
   public void handleMessage(MessageCreatedEvent event) {
     MessageDto message = event.getData();
-    String destination = "/sub/channels.%s.messages".formatted(message.channelId());
+    String destination = String.format("/sub/channels.%s.messages", message.channelId());
     messagingTemplate.convertAndSend(destination, message);
   }
 }
